--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,8 +1,8 @@
-name: Simple CI-CD to AKS
+name: Simple CI-CD Pipeline (Build → Test → Deploy)
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   workflow_dispatch: {}
 
 env:
@@ -10,14 +10,24 @@ env:
   ACR_LOGIN_SERVER: capstoneacr8072.azurecr.io
   AKS_RG: eightmin-rg
   AKS_CLUSTER: capstone-aks
-
+# Lint Stage
 jobs:
-  ci-cd:
+  lint:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+
+      - name: Check Dockerfiles exist
+        run: |
+          if [ ! -f frontend/Dockerfile ]; then echo "Missing frontend Dockerfile" && exit 1; fi
+          if [ ! -f db/Dockerfile ]; then echo "Missing mysql Dockerfile" && exit 1; fi
+          echo "Dockerfile check OK"
+# Test Stage
+  test:
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v4
 
       - name: Azure login
         uses: azure/login@v2
@@ -27,29 +37,57 @@ jobs:
       - name: Login to ACR
         run: az acr login --name $ACR_NAME
 
-      - name: Build frontend image
+      - name: Build images for scanning (no push)
+        run: |
+          docker build -t $ACR_LOGIN_SERVER/capstone-frontend:test ./frontend
+          docker build -t $ACR_LOGIN_SERVER/capstone-mysql:test ./db
+
+      - name: Trivy Scan - Frontend
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          image-ref: ${{ env.ACR_LOGIN_SERVER }}/capstone-frontend:test
+          format: json
+          output: trivy-frontend-report.json
+          exit-code: "0"
+
+      - name: Trivy Scan - MySQL
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          image-ref: ${{ env.ACR_LOGIN_SERVER }}/capstone-mysql:test
+          format: json
+          output: trivy-mysql-report.json
+          exit-code: "0"
+
+      - name: Upload Trivy Reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: trivy-reports
+          path: |
+            trivy-frontend-report.json
+            trivy-mysql-report.json
+#Build Stage
+  build:
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Azure login
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Login to ACR
+        run: az acr login --name $ACR_NAME
+
+      - name: Build final Docker images
         run: |
           docker build -t $ACR_LOGIN_SERVER/capstone-frontend:${{ github.sha }} ./frontend
           docker tag $ACR_LOGIN_SERVER/capstone-frontend:${{ github.sha }} $ACR_LOGIN_SERVER/capstone-frontend:latest
 
-      - name: Build mysql image
-        run: |
           docker build -t $ACR_LOGIN_SERVER/capstone-mysql:${{ github.sha }} ./db
           docker tag $ACR_LOGIN_SERVER/capstone-mysql:${{ github.sha }} $ACR_LOGIN_SERVER/capstone-mysql:latest
-
-      - name: Trivy scan frontend
-        uses: aquasecurity/trivy-action@0.28.0
-        with:
-          image-ref: ${{ env.ACR_LOGIN_SERVER }}/capstone-frontend:${{ github.sha }}
-          format: table
-          exit-code: '0'
-
-      - name: Trivy scan mysql
-        uses: aquasecurity/trivy-action@0.28.0
-        with:
-          image-ref: ${{ env.ACR_LOGIN_SERVER }}/capstone-mysql:${{ github.sha }}
-          format: table
-          exit-code: '0'
 
       - name: Push images to ACR
         run: |
@@ -57,6 +95,13 @@ jobs:
           docker push $ACR_LOGIN_SERVER/capstone-frontend:latest
           docker push $ACR_LOGIN_SERVER/capstone-mysql:${{ github.sha }}
           docker push $ACR_LOGIN_SERVER/capstone-mysql:latest
+#Deploy Stage
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - uses: actions/checkout@v4
 
       - name: Set AKS context
         uses: azure/aks-set-context@v4
@@ -65,10 +110,17 @@ jobs:
           cluster-name: ${{ env.AKS_CLUSTER }}
 
       - name: Apply Kubernetes manifests
-        run: |
-          kubectl apply -f k8s/
+        run: kubectl apply -f k8s/
 
-      - name: Update frontend deployment to latest
+      - name: Update frontend deployment
         run: |
-          kubectl set image deployment/frontend-deployment frontend=$ACR_LOGIN_SERVER/capstone-frontend:latest
+          kubectl set image deployment/frontend-deployment \
+          frontend=$ACR_LOGIN_SERVER/capstone-frontend:latest
+#Report Stage
+  report:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Pipeline summary
+        run: echo "CI/CD pipeline completed successfully"
 
